@@ -55,12 +55,65 @@ public:
 };
 std::ostream& operator<<(std::ostream& str, Andor::ConfigV1::EnumFanMode enval);
 
+/** @class ConfigV2
+
+  
+*/
+
+
+class ConfigV2 {
+public:
+  enum { TypeId = Pds::TypeId::Id_AndorConfig /**< XTC type ID value (from Pds::TypeId class) */ };
+  enum { Version = 2 /**< XTC type version number */ };
+  enum EnumFanMode {
+    ENUM_FAN_FULL = 0,
+    ENUM_FAN_LOW = 1,
+    ENUM_FAN_OFF = 2,
+    ENUM_FAN_ACQOFF = 3,
+    ENUM_FAN_NUM = 4,
+  };
+  enum EnumCropMode {
+    ENUM_CROP_OFF = 0,
+    ENUM_CROP_ON = 1,
+    ENUM_CROP_EX = 2,
+    ENUM_CROP_NUM = 3,
+  };
+  virtual ~ConfigV2();
+  virtual uint32_t width() const = 0;
+  virtual uint32_t height() const = 0;
+  virtual uint32_t orgX() const = 0;
+  virtual uint32_t orgY() const = 0;
+  virtual uint32_t binX() const = 0;
+  virtual uint32_t binY() const = 0;
+  virtual float exposureTime() const = 0;
+  virtual float coolingTemp() const = 0;
+  virtual Andor::ConfigV2::EnumFanMode fanMode() const = 0;
+  virtual Andor::ConfigV2::EnumCropMode cropMode() const = 0;
+  virtual uint8_t baselineClamp() const = 0;
+  virtual uint8_t highCapacity() const = 0;
+  virtual uint8_t gainIndex() const = 0;
+  virtual uint16_t readoutSpeedIndex() const = 0;
+  virtual uint16_t exposureEventCode() const = 0;
+  virtual uint32_t numDelayShots() const = 0;
+  /** Total size in bytes of the Frame object */
+  virtual uint32_t frameSize() const = 0;
+  /** calculate frame X size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixelsX() const = 0;
+  /** calculate frame Y size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixelsY() const = 0;
+  /** calculate total frame size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixels() const = 0;
+};
+std::ostream& operator<<(std::ostream& str, Andor::ConfigV2::EnumFanMode enval);
+std::ostream& operator<<(std::ostream& str, Andor::ConfigV2::EnumCropMode enval);
+
 /** @class FrameV1
 
   
 */
 
 class ConfigV1;
+class ConfigV2;
 
 class FrameV1 {
 public:
