@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-06-25
+2016-4-18 David Schneider
+- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229
+
 Tag: V00-06-24
 2016-4-4 David Schneider
 - update to pdsdata 8.6.7 with UsdUsb::FexConfigV1,FexDataV1, and Generic1D::ConfigV0,DataV0
